--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-i18next": "^13.2.2",
     "react-icons": "^4.12.0",
     "react-qr-code": "^2.0.12",
+    "react-qr-reader": "^2.2.1",
     "react-redux": "^8.1.2",
     "react-responsive-pagination": "^2.2.4",
     "react-router-dom": "6",
@@ -59,6 +60,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-js-pagination": "^3.0.7"
+    "@types/react-js-pagination": "^3.0.7",
+    "@types/react-qr-reader": "^2.1.7"
   }
 }
